# pas

./: .cursorrules  .git.bak  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  VERSION  dev-guide.md  pyproject.toml  requirements.txt
completions/: _xssh  _xvnc
helpers/: cloudflare.py  core.py  supabase.py  tui.py
libs/pas-core/: README.md  pyproject.toml
libs/pas-core/docs/: ai-assistant-summary.md
libs/pas-core/src/pas_core/: __init__.py  ai_assistant_snippets.py  config.py  git_remote_providers.py  git_utils.py  mtime_display.py  service_config.py  write_ai_assistant_snippets.py
media/: img-batch-ops  mp3pad_n_merge  mp3slice  mp3slice_1st_n_merge  v2mp4  v2waveform  vannotate  vaudio  vconcat  vconcat_vs  vconcat_xfade  vcrossfade  vcut  vdl  vdup  vframe  vframe-at  vframe-first  vframe-last  vframe-omit-last-n  vgen-counter  videosplit_cmd_gen  vmark  vmeta  vspeed  vsplit_by_time  vsplit_scene  vtime_len  vupto
pas_cli/: __init__.py  main.py
scripts/: install-deps.sh  install.sh  refresh-bin  setup-path
services/: ai-ops.py  api-ops.py  cf-domains.py  cf-ops.py  cf-tunnel-ops.py  cf-tunnels.py  check-cloudflare.py  defisheye-calibration-guide.md  defisheye.py  gcp-ops.py  gh-actions-secrets-vars-setup.py  gh-create-org.py  gh-init-repo.py  gh-ops.py  gh-org-create.py  gh-repo-access-grant.py  gh-repo-init.py  gh-repo-reset.py  gh-repo-transfer.py  gh-reset-repo.py  gh-transfer-repo.py  git-use-key.py  legacy-macos-cloudflare-tunnel-migration.py  mnt-ops.py  n8n-sb-memory-n-rag.py  openclaw-ops.py  pas.py  py-publish.py  rclone-ops.py  (+10 more)
(+18 files in other folders)
