[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "pas-core"
version = "0.1.0"
description = "PAS shared project config and toolkit helpers"
requires-python = ">=3.10,<3.14"
dependencies = [
    "keyring>=25.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.10,<2.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pas_core"]
